# python_nncmanohar_package

./: README.md  build_notes.txt  pyproject.toml
src/nncmanohar/: pythonutils.py
