[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nncmanohar"
version = "0.0.3"
authors = [
  { name="Manohar", email="nncmanohar@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
[project.license-files]
globs = ["LICENSE*"]


[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
